applications/test/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
    cert-manager.io/issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - test.c1.zem.org.uk
      secretName: ingress-test-tls
  ingressClassName: nginx
  rules:
    - host: "test.c1.zem.org.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 8000
