applications/test/base/internal.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-internal
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - echo.internal.zem.org.uk
      secretName: ingress-internal-test-tls
  ingressClassName: internal-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 8000
